--- a/final.tex
+++ b/final.tex
@@ -90,7 +90,7 @@ How would you improve and further develop your application design if time  and e
 
 \section{Mihnea Dobrescu-Balaur individual part}
 
-\section{Individual study of a feature - content discovery}
+\subsection{Individual study of a feature - content discovery}
 
 In the following part of the report, we will discuss about \textbf{content discovery}, along with \textbf{clustering and correlation} by region, subject, tag etc.
 
@@ -99,7 +99,7 @@ This includes the way that the news articles are first fetched, then filtered an
 The following sections will look at \textit{rationale} (the theory behind the feature and how it works), \textit{motivation} (why is this feature key to the application and how does it bring value to users), \textit{limitations} (and how they can be managed), \textit{evaluation} (metrics of quantifying the validation of the feature) and \textit{future work} (how could the application be improved).
 
 
-\section{Rationale}
+\subsection{Rationale}
 
 As presented in the introduction, the Web follows a decentralized model, having information floating everywhere around. Furthermore, the web started mostly \textit{schema-less}, meaning that even though the HTML markup has a structure and a syntax (that many authors don't respect 100\%), they don't provide any semantic value, making most of the content unstructured. More recent efforts, like schema.org\footnote{http://schema.org/} and microformats.org\footnote{http://microformats.org/} have tried to improve this situation, but there is still a long way to go.
 
@@ -110,9 +110,6 @@ With our application, the intention is to completely automate this process. One 
 The other way to solve this problem is to use the work already done by other such algorithms or people. It is worth mentioning that this approach is only possible thanks to the development of the Social Web, together with Linked Data\footnote{http://linkeddata.org/}, that allow for machine-based discovery of content online.
 
 The main data source for our applications are RSS feeds of news agencies (and other popular newspapers) around the world. RSS uses XML, and it makes use of semantic markup. Having an article in RSS format, it is easy to extract basic information like title, description and publish date. Some feeds, like the one from NY Times\footnote{http://www.nytimes.com} even provide categories in the markup, so we can know with no extra work that an article is, for example, about politics.
-
-We get the news agencies list from Wikipedia \footnote{http://en.wikipedia.org/wiki/List\_of\_news\_agencies}
-, and the other newspapers and websites are added by our own judgment. Because the list of news agencies is clustered by region, it is trivial to decide in what regions the articles we find are relevant. This implies that we have to trust the news agencies for sharing relevant articles, and it is an assumption that we accept.
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[language=XML, frame=single, caption=Example RSS feed, breaklines=true, captionpos=b]
@@ -139,6 +136,8 @@ We get the news agencies list from Wikipedia \footnote{http://en.wikipedia.org/w
 \end{lstlisting}
 \end{minipage}
 
+We get the news agencies list from Wikipedia \footnote{http://en.wikipedia.org/wiki/List\_of\_news\_agencies}
+, and the other newspapers and websites are added by our own judgment. Because the list of news agencies is clustered by region, it is trivial to decide in what regions the articles we find are relevant. This implies that we have to trust the news agencies for sharing relevant articles, and it is an assumption that we accept.
 
 Thanks to the structured nature of the RSS feeds, we can find related articles, media and tweets using other APIs, like Bing search and Twitter search. We used Bing because it allows more queries for free than other competitors and that allowed us to experiment during development.
 
@@ -146,7 +145,7 @@ The data source for our application stays updated thanks to the pipeline of oper
 
 It is worth mentioning that if we decide to add an extra type of data to the timeline, it is easy to plug it in into the existing architecture, thanks to the pipeline design.
 
-\section{Motivation}
+\subsection{Motivation}
 
 When choosing a theme for this assignment, we wanted to opt for an idea that would lead to a useful product, something that adds value to the modern day, always up to date, and always in a rush user. We thought about the benefits of the Social Web and of Linked Data, and we realized that one of the biggest benefits that are brought by this pair is enhanced knowledge. The World Wide Web is an enormous "place" that contains vast amounts of information, but finding the proper bits of information can be hard because of its big scale. The Social Web and Linked Data help in this problem because they empower search engine (and other automated tools) in partially understanding what items on the Web are about, what their semantics are.
 
@@ -160,7 +159,7 @@ We also decided not to affect the original content in any way, so when a user wa
 
 We hope that all these decisions together make up an accessible and easy to use web application that people around the world can use to get up to date to the events that interest them, regardless of the digital platform they are using to access the Internet.
 
-\section{Limitations}
+\subsection{Limitations}
 
 In order to save time and come up with a working application within the given time constraints, we made some choices that both helped us reach our goal faster and introduced some limitations.
 
@@ -172,7 +171,7 @@ It is worth mentioning that both limitations could be overcame, given enough tim
 
 Extended user testing would probably reveal other issues, as long as potential fixes to them. However, given the time in which we developed and tested the prototype, the before mentioned facts were the main limitations that we encountered.
 
-\section{Evaluation}
+\subsection{Evaluation}
 
 Considering the fact that our application is Web based, we think that the regular website analytics are a good fit.
 
@@ -198,7 +197,7 @@ Memory usage becomes relevant when scaling out the application, in order to requ
 
 However, we did not put strong accent on performance analysis in the beginning, since as long as there is not a large amount of users accessing the application, the response times are fast.
 
-\section{Future work}
+\subsection{Future work}
 
 As mentioned in the Rationale section, the demonstrated application is a \textit{working prototype}, not close to the actual envisioned product. This was mainly because of the time and resources available at the moment. Even if we only developed a prototype, this has helped us realize what features are relevant and not, what limitations our idea has, and what we can do to improve it. There are a number of items that we would like to implement or improve, having the possibility.
 
